create canvas on page for falling snow

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 </head>
 
 <body>
+    <!-- Canvas for the falling snow animation -->
+    <canvas id="snowCanvas"></canvas>
     <!-- Main heading for the page -->
     <h1>Festive Advent Calendar</h1>
     <!-- Calendar container where doors will be dynamically generated -->
