--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         rel="stylesheet">
     <!-- Link to the external CSS file -->
     <link rel="stylesheet" href="styles.css">
+    <script src="snowEffect.js" defer></script>
 </head>
 
 <body>
