move core js file to head and add defer

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
         rel="stylesheet">
     <!-- Link to the external CSS file -->
     <link rel="stylesheet" href="styles.css">
+
+    <!-- Link to the external JavaScript files -->
     <script src="snowEffect.js" defer></script>
+    <script src="script.js" defer></script>
 </head>
 
 <body>
@@ -21,9 +24,6 @@
     <!-- Calendar container where doors will be dynamically generated -->
     <div id="calendar"></div>
     <button id="resetButton">Reset</button>
-
-    <!-- Link to the external JavaScript file -->
-    <script src="script.js"></script>
 </body>
 
 </html>
