change js, index, and css to use image for doors in popup

--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
     <!-- Calendar container where doors will be dynamically generated -->
     <div id="calendar"></div>
     <button id="resetButton">Reset</button>
+
+    <div id="imageModal" class="modal" aria-hidden="true">
+    <div class="modal-content" role="dialog" aria-modal="true">
+        <button class="modal-close" aria-label="Close modal">&times;</button>
+        <img id="modalImage" alt="" />
+    </div>
+    </div>
+
 </body>
 
 </html>
