update index to receive js toggle button for sound

--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
     <h1>Festive Advent Calendar</h1>
     <!-- Calendar container where doors will be dynamically generated -->
     <div id="calendar"></div>
+    <!-- Control container where reset button and sound toggle will be generated for desktop only -->
+     <div id="controls">
     <button id="resetButton">Reset</button>
+    <div id="soundToggleContainer"></div>
+    </div>
 </body>
 
 </html>
