--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 
 <body>
     <!-- Canvas for the falling snow animation -->
-    <canvas id="snowCanvas"></canvas>
+    <!-- Decorative canvas (hidden from AT) -->
+    <canvas id="snowCanvas" aria-hidden="true"></canvas>
   
     <!-- Main heading for the page -->
     <h1>Festive Advent Calendar</h1>
