--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Interactive festive advent calendar with daily surprises for December.">
     <title>Advent Calendar</title>
-    <!-- Link to Google Fonts for a festive font -->
-    <link href="https://fonts.googleapis.com/css2?family=Mountains+of+Christmas:wght@400;700&display=swap"
-        rel="stylesheet">
-    <!-- Link to the external CSS file -->
+    <!-- Link to the external CSS file with "Henny Penny" Google Font -->
     <link rel="stylesheet" href="styles.css">
 
     <!-- Link to the external JavaScript files -->
@@ -22,7 +19,7 @@
     <canvas id="snowCanvas"></canvas>
   
     <!-- Main heading for the page -->
-    <h1>Festive Advent Calendar</h1>
+    <h1>Merry Christmas!</h1>
   
     <!-- Calendar container where doors will be dynamically generated -->
     <div id="calendar"></div>
