Force test of date gating

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <h1>Merry Christmas!</h1>
   
     <!-- Calendar container where doors will be dynamically generated -->
-    <div id="calendar"></div>
+    <div id="calendar" class="calendar"></div>
   
     <!-- Control container where reset button and sound toggle will be generated for desktop only -->
     <div id="controls">
