add accessible reset dialog to html file

--- a/index.html
+++ b/index.html
@@ -51,6 +51,16 @@
       </div>
     </div>
 
+    <div id="resetConfirm" class="locked-popup reset-confirm" role="dialog" aria-modal="true"
+      aria-labelledby="resetConfirmTitle" aria-describedby="resetConfirmMessage" aria-hidden="true"    >
+      <h2 id="resetConfirmTitle" class="reset-title">🎄 Reset Calendar?</h2>
+      <p id="resetConfirmMessage"></p>
+      <div class="reset-buttons">
+        <button id="resetConfirmYes" class="reset-yes">🎁 Reset</button>
+        <button id="resetConfirmNo" class="reset-no">Cancel</button>
+      </div>
+    </div>
+
 </body>
 
 </html>
