Shorten button, leave details to the popup

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   
     <!-- Control container where reset button and sound toggle will be generated for desktop only -->
     <div id="controls">
-      <button id="resetButton">Reset Calendar (Clear Progress)</button>
+      <button id="resetButton">🎁 Reset</button>
       <div id="soundToggleContainer"></div>
     </div>
 
